Background z-index fix

--- a/css/resume.css
+++ b/css/resume.css
@@ -15,7 +15,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: rgba(35, 166, 213, .3); //#23a6d5;
-  z-index: -1;
+
   -webkit-animation: hue-rotate 30s linear infinite;
      -moz-animation: hue-rotate 30s linear infinite;
        -o-animation: hue-rotate 30s linear infinite;
@@ -252,7 +252,7 @@ body{
 }
 
 .stars {
-  color: lightblue;
+  color: #23a6d5;
   width: 150px;
   float: left;
   -webkit-animation: bright-rotate 30s linear infinite;
